k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-native-crud-graalvm
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: spring-native-crud-graalvm
  template:
    metadata:
      labels:
        app: spring-native-crud-graalvm
    spec:
      containers:
        - name: spring-native-crud-graalvm
          image: iliaspap/spring-native-crud-graalvm:1.0.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: actuator/health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: actuator/health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            periodSeconds: 5
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: spring-native-crud-graalvm-service
spec:
  type: ClusterIP
  selector:
    app: spring-native-crud-graalvm
  ports:
    - port: 8080
      targetPort: 8080
