k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-native-crud-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "spring-native-crud.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-native-crud-vs
spec:
  hosts:
    - "spring-native-crud.com"
  gateways:
    - spring-native-crud-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: spring-native-crud-graalvm-service
